# onikeiso

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CmakeLists.txt  LICENSE.md  README.md  build.bat  configure.bat
.github/workflows/: ci.yml
src/: CMakeLists.txt
src/desktop/: CmakeLists.txt  imgui_node_graph_test.h  main.cpp  onikeiso_app.cpp  onikeiso_app.h  onikeiso_desktop_app.cpp  onikeiso_desktop_app.h
src/desktop/gates/: gates.h  not_gate.h  visual_gate.h
src/desktop/node/: and_node.h  node.cpp  node.h  nodes.h  not_node.h
src/desktop/windows/: common_window.cpp  common_window.h  gate_library.cpp  gate_library.h  main_dockspace.cpp  main_dockspace.h  scheme_preview.cpp  scheme_preview.h  simulation_info.cpp  simulation_info.h  windows.h
src/onikeiso/: CMakeLists.txt  CmakeLists.txt  onikeiso.c  onikeiso.h  onikeiso.test.c  queue.c  queue.h  test.c
tests/: CMakeLists.txt
tests/onikeiso/: CMakeLists.txt  bfs.test.c  gates.test.c  onikeiso.test.c  queue.test.c
